completed functional UI for rock-paper-scissors

--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
   </head>
 
   <body>
+    <h2>Choose rock, paper, or scissors below</h2>
+    <button id="rock" class="button">ROCK</button>
+    <button id="paper" class="button">PAPER</button>
+    <button id="scissors" class="button">SCISSORS</button>
+    <div id="roundResults"></div>
+    <div id="finalResults"></div>
+    <button id="playAgainButton" onClick="window.location.reload()">Play Again</button>
   </body>
 
   <script src="javascript.js"></script>
